--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: stactools-ephemeral
+name: stactools-esa-worldcover
 channels:
   - conda-forge
   - defaults
@@ -6,3 +6,4 @@ dependencies:
   - gdal>=3.3
   - geos>=3.3
   - rasterio>=1.2
+  - pyproj>=3.3
