--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,21 @@
 [metadata]
-name = stactools-ephemeral
-version = attr: stactools.ephemeral.__version__
-description = PROVIDE DESCRIPTION HERE
+name = stactools-esa-worldcover
+version = attr: stactools.esa_worldcover.__version__
+description = stactools package for ESA WorldCover data
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = stac-utils
-author_email = stac@radiant.earth
-url = https://github.com/stactools-packages/ephemeral
+author = Preston Hartzell
+author_email = preston.hartzell@gmail.com
+url = https://github.com/stactools-packages/esa-worldcover
 project_urls =
-    Documentation = https://stactools-ephemeral.readthedocs.io/en/latest/
-    Issues = https://github.com/stactools-packages/ephemeral/issues
+    Issues = https://github.com/stactools-packages/esa-worldcover/issues
 keywords =
     stactools
     pystac
     catalog
     STAC
+    ESA
+    landcover
 classifiers =
     Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
@@ -27,7 +28,8 @@ package_dir =
     = src
 packages = find_namespace:
 install_requires =
-    stactools >= 0.2.6
+    stactools >= 0.3.0
+    click != 8.1.0
 
 [options.packages.find]
 where = src
