update: modernize to current stactools template

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,9 @@
+black
 codespell
-editorconfig-checker
 flake8
 isort
-jupyter
 mypy
-pylint
+pre-commit
 pytest
 pytest-cov
-sphinx
-sphinx-autobuild
-sphinx-click
-sphinxcontrib-fulltoc
-sphinxcontrib-napoleon
-toml
-types-click
 types-python-dateutil
-types-pytz
-yapf
