--- a/environment.yml
+++ b/environment.yml
@@ -5,4 +5,5 @@ channels:
 dependencies:
   - gdal>=3.3
   - geos>=3.3
-  - rasterio>=1.2
+  - conda-forge::rasterio>=1.3
+  - conda-forge::libstdcxx-ng # gdal dependency. Make sure it's from the same channel as gdal
