--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,9 @@ package_dir =
     = src
 packages = find_namespace:
 install_requires =
-    stactools >= 0.3.0
     click != 8.1.0
+    pystac >= 1.7.0
+    stactools >= 0.3.0
 
 [options.packages.find]
 where = src
