--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,11 @@ package_dir =
     = src
 packages = find_namespace:
 install_requires =
-    stactools >= 0.3.0
-    click != 8.1.0
+    click >= 8.1.3
+    pystac >= 1.7.0
+    stactools >= 0.4.4
+    rasterio >= 1.3.6
+    Shapely >= 2.0.1
 
 [options.packages.find]
 where = src
