--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ packages = find_namespace:
 install_requires =
     click >= 8.1.3
     pystac >= 1.7.0
-    stactools >= 0.4.4
+    stactools @ git+https://github.com/stac-utils/stactools.git@c2bdf32331a9782373d7152472093cd4bc4298a9  # raster footprint fix
     rasterio >= 1.3.6
     Shapely >= 2.0.1
 
